<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jikexueyuan.calculator.MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@android:color/holo_green_light"
        android:textSize="70sp"
        android:layout_width="345dp"
        android:layout_marginStart="4dp"
        android:layout_height="90dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum7"
                android:textSize="50sp"
                android:shadowColor="@android:color/black" />

            <Button
                android:text="@string/num8"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum8"
                android:textSize="50sp"
                android:layout_width="wrap_content" />

            <Button
                android:text="@string/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum9"
                android:textSize="50sp" />

            <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAdd"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum4"
                android:textSize="50sp" />

            <Button
                android:text="@string/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum5"
                android:textSize="50sp" />

            <Button
                android:text="@string/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum6"
                android:textSize="50sp" />

            <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMinus"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum1"
                android:textSize="50sp" />

            <Button
                android:text="@string/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum2"
                android:textSize="50sp" />

            <Button
                android:text="@string/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum3"
                android:textSize="50sp" />

            <Button
                android:text="@string/times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnTimes"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:textSize="50sp" />

            <Button
                android:text="@string/num0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnNum0"
                android:textSize="50sp" />

            <Button
                android:text="@string/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEquals"
                android:textSize="50sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDivide"
                android:text="@string/divide"
                android:textSize="50sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>
